created styles folder, about html and started resume section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,11 +13,13 @@
 
 </head>
 <body>
+
     <header>
         <nav class="cabecalho">
             <ul class="cabecalho__menu">
                 <li class="cabecalho__menu--item home"><a href="./index.html">Home</a></li>
                 <li class="cabecalho__menu--item about"><a href="./about.html">Sobre Mim</a></li>
+                <li class="cabecalho__menu--item resume"><a href="./resume.html">Currículo</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +28,7 @@
         
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="apresentacao__conteudo__titulo--destaque">com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Diogo Hernandes, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Diogo Hernandes, desenvolvedor Front-end com especialidade em <strong class="apresentacao__conteudo__texto--destaque">React</strong>, <strong class="apresentacao__conteudo__texto--destaque">HTML</strong> e <strong class="apresentacao__conteudo__texto--destaque">CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links--redes">Acesse minhas redes:</h2>
