--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="./styles/about.css">
 </head>
 <body>
 
@@ -21,13 +20,13 @@
         </nav>
     </header>
 
-    <main class="sobre">
-        <section class="sobre__conteudo">
-            <h1 class="sobre__conteudo--titulo">Sobre mim</h1>
-            <p class="sobre__conteudo--texto">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ex expedita accusamus qui recusandae a nam magni, porro accusantium reprehenderit iste nisi! Soluta quo dolore quibusdam ipsam quos! Atque, eveniet! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id optio, eos earum ut voluptas vitae itaque reiciendis ducimus repellendus nostrum quaerat unde totam qui veniam tenetur! Harum autem suscipit at.
-            </p> <br><br>
-            <p class="sobre__conteudo--texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, eum? Cum rem deleniti, temporibus quae quibusdam earum repellat veritatis doloremque. Quae eaque saepe deleniti sit nemo perspiciatis beatae quas molestias? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel porro, iste laborum natus cupiditate impedit dolorem repellendus voluptate commodi voluptatem cumque quaerat nemo laudantium consectetur consequuntur eos? Asperiores, autem adipisci!</p>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo__texto">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ex expedita accusamus qui recusandae a nam magni, porro accusantium reprehenderit iste nisi! Soluta quo dolore quibusdam ipsam quos! Atque, eveniet!
+            </p>
+            <p class="apresentacao__conteudo__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, eum? Cum rem deleniti, temporibus quae quibusdam earum repellat veritatis doloremque. Quae eaque saepe deleniti sit nemo perspiciatis beatae quas molestias? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel porro, iste laborum natus cupiditate impedit dolorem repellendus voluptate commodi voluptatem cumque quaerat nemo laudantium consectetur consequuntur eos? Asperiores, autem adipisci!</p>
         </section>
 
         <img src="https://placekitten.com/488/550" alt="foto de dev programando para portfolio">
