--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
     </main>
 
-    <footer class="rodape">
+    <footer class="footer">
         <p>Desenvolvido por Diogo Hernandes, apenas para fins didáticos.</p>
     </footer>
 </body>
